# perseus-vault

./: .gitignore  CHANGELOG.md  CLAIMS-AUDIT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PERF.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  awesome-mimir.md  benchmarks-index.html  build.rs  funding.json  glama.json  index.html  manifest.json  server.json  smithery.yaml
.github/workflows/: concurrency-gate.yml  integrations.yml  mcpb.yml  noisegate-golden.yml  perf-gate.yml  release.yml  smoke-test.yml  test.yml
benchmark/: GAUNTLET.md  run.py
benchmark/beam/: report.json
benchmark/contention/: README.md
benchmark/embedding-quantization/: measure_1bit_small.py
benchmark/lambda/: CAMPAIGN_REPORT.md  README.md  build_report.py  campaign_run.sh  check_8x.py  coldstart_capture.sh  competitive_bench.py  gate.sh  (+19 more)
docs/: EXPORT-CONTROL.md  GRPC-SECURITY.md  SBOM.md  SECURITY-INDEX.md  deployment-amd-mi300x.md  deterministic-recall-and-provenance.md  federal-buyers.md  macos-signing.md  retention.md  retrieval-modes.md  security-review-2026-07-05.md  transport.md
integrations/: README.md
integrations/praison/: README.md  pyproject.toml
integrations/praison/perseus_vault_praison/: __init__.py
integrations/praison/tests/: test_perseus_vault_adapter.py
scripts/: bootstrap.sh  build-mcpb.sh  gen_benchmark_page.py  install.sh  sign-macos.sh
src/: beliefs.rs  capture.rs  communities.rs  db.rs  dedup.rs  embedding.rs  encryption.rs  glibc_compat.rs  grpc.rs  httplimit.rs  main.rs  mcp.rs  models.rs  multimodal.rs  schema.rs  tools.rs  transport.rs  util.rs
(+76 files in other folders)
