[package]
name = "engram-rs"
version = "0.1.0"
edition = "2021"
description = "Persistent memory engine for Perseus — MCP JSON-RPC stdio server"
repository = "https://github.com/tcconnally/engram-rs"
license = "MIT"

[[bin]]
name = "engram"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
