[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perseus-vault-praison"
version = "0.1.0"
description = "Perseus Vault MemoryProtocol adapter for PraisonAI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Perseus Computing LLC" }]
keywords = ["praisonai", "praisonaiagents", "perseus-vault", "memory", "mcp", "agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "praisonaiagents>=0.0.50",
    "perseus-vault-client>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/Perseus-Computing-LLC/perseus-vault"
Repository = "https://github.com/Perseus-Computing-LLC/perseus-vault"

[tool.setuptools]
packages = ["perseus_vault_praison"]
package-dir = { "" = "." }
